<resources>
    <string name="app_name">ChatCat</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Set Profile</string>
    <string name="action_log_out">Log Out</string>
    <string name="import_img_button">Import Image</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign In</string>
    <string name="login_success">Logged</string>
    <string name="login_error">Login failed.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="no_account_link">No account yet? Create one</string>
    <string name="error_invalid_username">This email address is invalid.</string>
    <string name="error_invalid_password">This password is too short.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="no_connection">No network connection available.</string>

    <!-- Strings related to register -->
    <string name="title_activity_register">Register</string>
    <string name="register_button">Register</string>
    <string name="register_success">Successfully registered.</string>
    <string name="register_error">User already exists.</string>
    <string name="password_confirmation">Confirm your password.</string>
    <string name="error_no_match">Passwords don\'t match.</string>

    <!-- Strings related to chat -->
    <string name="title_activity_chat">ChatCat</string>
    <string name="label_send_button">Send</string>
    <string name="sent_success">Sent</string>
    <string name="sent_failed">Error, try again.</string>
    <string name="prompt_message">Text Message</string>
    <string name="title_activity_settings2">Settings2Activity</string>
    <string name="save_image_success">Image saved successfully!</string>
    <string name="save_image_failed">failed to save image</string>

    <!-- Strings related to settings -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">background color</string>
    <string name="pref_sync_frequency_summary">Set the background color</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>

    <string name="backgroundColor">%1$s</string>

</resources>
