<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.scan.chat.android.androidchatscan.ChatActivity">
    <item android:id="@+id/import_img_button" android:title="@string/import_img_button"
        android:icon="@mipmap/ic_photo_btn" android:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_profile" android:title="@string/action_profile"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_log_out" android:title="@string/action_log_out"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
