<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scan.chat.android.androidchatscan.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <!-- Application name with special font -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:textSize="50dp"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:id="@+id/text_view_login_title" />

        <!-- Login progress (not shown if Login form is shown) -->
        <ProgressBar
            android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <!-- Login form (not shown if Login progress is shown) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/login_form"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:background="@drawable/input_text"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_text"                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/sign_in_button" style="?android:textAppearanceSmall"
                android:text="@string/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/no_account_link" style="?android:textAppearanceSmall"
                android:text="@string/no_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
